--- a/styles.css
+++ b/styles.css
@@ -9,10 +9,8 @@
 }
 
 .grid-square {
-    border: 1px solid #000;
+    border: .5px solid #000;
     background-color: #f0f0f0;
-    width: 40px;
-    height: 40px;
     box-sizing: border-box;
 }
 
